deployments/jellyseer/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseer
  namespace: default
  labels:
    app: jellyseer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jellyseer
  template:
    metadata:
      labels:
        app: jellyseer
    spec:
      containers:
        - name: jellyseer
          image: ghcr.io/fallenbagel/jellyseerr:latest
          ports:
            - containerPort: 5055
      volumes:
        - name: jellyseer-config
          hostPath:
            path: /data/foo
            type: Directory

---
apiVersion: v1
kind: Service
metadata:
  name: jellyseer-service
  namespace: default
spec:
  selector:
    app: jellyseer
  ports:
    - name: jellyseer-port
      port: 80
      targetPort: 5055
