deployments/jellyseer/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseer-ingress
  namespace: media
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`sorozat.gyurus.hu`)
      kind: Rule
      services:
        - name: jellyseerr
          port: 5055
